# woodcut-planner

./: .gitignore  LICENSE  README.md  dev_plan.md  pieces.json  pyproject.toml  render.yaml  settings.json  test-pieces.json  test-settings.json  test_api.py  test_api.sh
exports/: arrangements.csv  purchase_order.csv  waste_analysis.csv
src/wood_calculator/: calculator.py  cli.py  models.py
src/woodcut_planner/: __init__.py  api.py  calculator.py  cli.py  csv_exporter.py  models.py  run.py  visualization.py
tests/: test_api.py
web/: .env.example  README.md  deno.json  package.json  render.yaml  svelte.config.js
web/src/lib/components/: PiecesInput.svelte  ResultsView.svelte  WoodTypeInput.svelte
web/src/lib/types/: wood.ts
web/src/lib/utils/: api.ts
web/src/routes/: +page.svelte
