[tool.poetry]
name = "woodcut-planner"
version = "0.1.0"
description = "A calculator for optimizing wood cutting arrangements"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "woodcut_planner", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.6"
click = "^8.1.8"
tabulate = "^0.9.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.26.0" # For testing FastAPI endpoints

[tool.poetry.scripts]
woodcut-planner = "woodcut_planner.cli:calculate"
woodcut-api = "woodcut_planner.api:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
